// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleWrapper renders 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
}

.emotion-1 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

<label
    class="emotion-0"
    for="toggleWrapper-1"
  >
    <input
      aria-checked="true"
      checked=""
      class="emotion-1"
      data-cy="toggleWrapper-input"
      id="toggleWrapper-1"
      type="checkbox"
      value=""
    />
    <div>
      isActive? true
    </div>
  </label>
</DocumentFragment>
`;

exports[`ToggleWrapper renders as a radio input 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
}

.emotion-1 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

<label
    class="emotion-0"
    for="toggleWrapper-2"
  >
    <input
      aria-checked="true"
      checked=""
      class="emotion-1"
      data-cy="toggleWrapper-input"
      id="toggleWrapper-2"
      type="radio"
      value=""
    />
    <div>
      isActive? true
    </div>
  </label>
</DocumentFragment>
`;
